[package]
name = "fast-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_collections = "0.5.0"
generic-array = { version = "1.0.0", features = ["const-default"] }
httparse = "1.9.4"
tungstenite = "0.23.0"

[dev-dependencies]
criterion = "0.5.1"
mio = { version = "0.8.11", features = ["os-poll", "net"] }

[[bench]]
name = "slice_new"
harness = false


#[profile.release]
#lto = 'fat'
