[package]
name = "dst_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_collections = "0.5.0"
generic-array = { version = "1.0.0", features = ["const-default"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false


# [profile.release]
# lto = 'fat'
